updated env, clarified NB201

--- a/201_DataScience_Exercise.ipynb
+++ b/201_DataScience_Exercise.ipynb
@@ -15,7 +15,7 @@
     "### Goals\n",
     "\n",
     "+ Test general capability to learn from data using Python\n",
-    "+ Designed to take approx 1 - 2 hours\n",
+    "+ Designed to take approx 2 - 3 hours\n",
     "+ Opportunities for extension and non-sequential steps\n",
     "+ This Notebook contains the questions only. See NB202 for the version with worked examples.\n",
     "\n",
@@ -143,7 +143,7 @@
     "\n",
     "1. Load the `prepared` table from local DB `data/airlines.sqlite` into a `pandas` dataframe\n",
     "\n",
-    "2. Plot the distribution of `statistics_minutes_delayed_total` for all records, confirm that the interquartile range (IQR) over all records is []\n",
+    "2. Plot the distribution of `statistics_minutes_delayed_total` for all records, confirm that the interquartile range (IQR) over all records is [65k, 165k]\n",
     "\n",
     "3. Plot the distribution of `statistics_minutes_delayed_total`, per `airport_code` - choose a suitable plot type such that we can read off (at least) the means, medians, and IQRs\n",
     "\n",
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Classification for Inference using Text Analysis "
+    "# 3. Creative Data Processing and Regression"
    ]
   },
   {
@@ -272,11 +272,11 @@
    "source": [
     "### Investigation direction\n",
     "\n",
-    "Let's get a little creative with classification for inference by using text analysis techniques.\n",
+    "Let's get a little creative with regression for inference:\n",
     "\n",
-    "+ Imagine that airports can charge a penalty to their carriers when the mean count of delays per carrier per month exceeds 100\n",
+    "+ Imagine that airports can charge a penalty to carriers when the mean count of delays per carrier per month exceeds 100\n",
     "+ Clearly it's not very fair to charge all the carriers for the sins of a few, so:\n",
-    "+ **Can we use this data to indicate the carriers that lead to higher mean delays, and guide a further deep dive investigation?**\n",
+    "+ **Can we use this dataset to indicate which carriers corrolate with higher mean delays, and guide a further deep dive investigation?**\n",
     "\n",
     "\n",
     "### Hints\n",
@@ -286,7 +286,11 @@
     "3. Keep it simple\n",
     "4. The feature `'statistics_carriers_names'` contains the names of the carriers per `airport_code` per `survey_date`\n",
     "5. We don't have the counts of delays per carrier, but we could normalise `'statistics_no_of_delays_carrier' / 'statistics_carriers_total'`\n",
-    "6. You might want to use `re`, `sklearn.feature_extraction.text.TfidfVectorizer`, and a classifier that outputs feature importances (e.g. `sklearn.tree.DecisionTreeClassifier`), or a regularising classifier that selects features (e.g. `sklearn.linear_model.LogisticRegression` with L1 or elasticnet penalization)"
+    "   \n",
+    "### More Hints:\n",
+    "1. There's a many to many mapping between carriers and airports, and (of course) airports have different sizes, so you should carefully consider hierarchies, mappings and normalizations\n",
+    "2. You could use text analysis to transform data:, to TF-IDF the carrier tokens in the airport documents (`re`, `sklearn.feature_extraction.text.TfidfVectorizer`)\n",
+    "3. You should use a model architecture that outputs feature importances, coefficient values, and/or penalises the function"
    ]
   },
   {
@@ -430,7 +434,7 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -a \"jonathan.sedar@oreum.io\" -udtmv -iv"
+    "%watermark -a \"<you@email.com>\" -udtmv -iv"
    ]
   },
   {
