--- a/201_DataScience_Exercise.ipynb
+++ b/201_DataScience_Exercise.ipynb
@@ -14,20 +14,27 @@
     "\n",
     "### Goals\n",
     "\n",
-    "+ Test general capability to learn from data using Python\n",
-    "+ Designed to take approx 2 - 3 hours\n",
+    "+ The following questions are designed to test your general capabilities in Learning from Data\n",
+    "+ Designed to take approx 1 - 2 hours\n",
     "+ Opportunities for extension and non-sequential steps\n",
     "+ This Notebook contains the questions only. See NB202 for the version with worked examples.\n",
+    "\n",
     "\n",
     "### Reality check\n",
     "\n",
     "+ This is a brief interview exercise so we can learn how you think and code\n",
-    "+ **This is not a thesis or a major project, so please do not spend more than 3 - 4 hours max**\n",
+    "+ Question 4 is optional, in case you want to get creative or if you are stuck on an earlier question\n",
+    "+ **This is not a thesis or a major project, so please do not spend more than 2 - 3 hours total**\n",
     "+ If you get stuck on a question, just skip over it and we can discuss it later\n",
     "+ We have tried to set fairly straightforward objective tasks, but there's \n",
     "  plenty of room for you to experiment and try various approaches\n",
-    "+ Feel free to install more packages if you want, but keep it simple\n",
     "\n",
+    "\n",
+    "### Technical note\n",
+    "\n",
+    "+ We primarily use a Python stack, so please use Python for this excercise\n",
+    "+ Be prepared to walk us through this Notebook with your answers and work inline\n",
+    "+ Feel free to install more packages if you want, but keep it simple\n",
     "\n",
     "\n",
     "### Contents\n",
@@ -82,15 +89,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +330,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Investigation direction\n",
+    "### OPTIONAL - Addtional Investigation - OPTIONAL\n",
+    "\n",
+    "This part of the exercise is optional only if you want to get creative or if you get stuck on an earlier question and still want to try something intersting\n",
     "\n",
     "Let's try something closer to the insurance domain. \n",
     "\n",
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,37 +398,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Author: jonathan.sedar@oreum.io\n",
+      "Author: <you@email.com>\n",
       "\n",
-      "Last updated: 2022-06-21 17:17:44\n",
+      "Last updated: 2022-10-12 16:10:15\n",
       "\n",
       "Python implementation: CPython\n",
-      "Python version       : 3.9.12\n",
-      "IPython version      : 8.3.0\n",
+      "Python version       : 3.9.13\n",
+      "IPython version      : 8.4.0\n",
       "\n",
       "Compiler    : Clang 12.0.0 \n",
       "OS          : Darwin\n",
-      "Release     : 21.5.0\n",
+      "Release     : 21.6.0\n",
       "Machine     : x86_64\n",
       "Processor   : i386\n",
       "CPU cores   : 8\n",
       "Architecture: 64bit\n",
       "\n",
       "numpy     : 1.22.3\n",
-      "pandas    : 1.4.2\n",
-      "matplotlib: 3.5.1\n",
-      "sqlite3   : 2.6.0\n",
-      "sys       : 3.9.12 (main, Jun  1 2022, 06:36:29) \n",
-      "[Clang 12.0.0 ]\n",
-      "sklearn   : 1.0.2\n",
+      "pandas    : 1.4.4\n",
       "seaborn   : 0.11.2\n",
+      "sqlite3   : 2.6.0\n",
+      "matplotlib: 3.5.2\n",
+      "sys       : 3.9.13 (main, Aug 25 2022, 18:29:29) \n",
+      "[Clang 12.0.0 ]\n",
       "\n"
      ]
     }
@@ -448,7 +448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('oreum_recruit')",
+   "display_name": "Python 3.9.13 ('oreum_recruit_exercises')",
    "language": "python",
    "name": "python3"
   },
@@ -462,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "pycharm": {
    "stem_cell": {
@@ -488,7 +488,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "fa9de0766857f3b09a20d8ab1c3538581d0840a325fd0e29c5fc99c1949ce3b5"
+    "hash": "ecf2fe0353b0913e5d6035e5e9cfa5afb860273aa1a4a34a40ab77a06a0a1f7f"
    }
   }
  },
